<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="237dp"
      android:layout_height="70dp"
      android:text="@string/welcome"
      android:textSize="50sp"
      app:layout_constraintBottom_toTopOf="@+id/purchaseItemsButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints" />


  <Button
      android:id="@+id/purchaseItemsButton"
      android:layout_width="217dp"
      android:layout_height="73dp"
      android:layout_marginBottom="16dp"
      android:text="@string/purchase_items"
      app:layout_constraintBottom_toTopOf="@+id/previousPurchasesButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.448"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/previousPurchasesButton"
      android:layout_width="217dp"
      android:layout_height="73dp"
      android:layout_marginBottom="8dp"
      android:text="@string/previous_purchases"
      app:layout_constraintBottom_toTopOf="@+id/cartButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.448"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/accountButton"
      android:layout_width="217dp"
      android:layout_height="73dp"
      android:layout_marginBottom="136dp"
      android:text="@string/account"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.448"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/cartButton"
      android:layout_width="217dp"
      android:layout_height="73dp"
      android:layout_marginBottom="16dp"
      android:text="@string/cart"
      app:layout_constraintBottom_toTopOf="@+id/accountButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.448"
      app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>